# NewComputeBench

./: .buildinfo  .gitignore  .gitmodules  .specific.sh  404.html  README.md  environment.yaml  genindex.html  index.html  mkdocs.yml  objects.inv  pim_transform_tutorial.md  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: build-site.yml
01-model-training/llm-pretrain-and-eval/: index.html
02-model-behaviour-level-simulation/clm-bitflip/: index.html
02-model-behaviour-level-simulation/clm-bitflip-lora-finetune/: index.html
02-model-behaviour-level-simulation/clm-onn/: index.html
02-model-behaviour-level-simulation/dev-guidelines/: index.html
02-model-behaviour-level-simulation/llm-bitflip/: index.html
02-model-behaviour-level-simulation/llm-optical-dev-guidelines/: index.html
02-model-behaviour-level-simulation/mase-triton/: index.html
02-model-behaviour-level-simulation/roberta-onn/: index.html
02-model-behaviour-level-simulation/roberta-pim/: index.html
02-model-behaviour-level-simulation/roberta-snn/: index.html
02-model-behaviour-level-simulation/vit-cim/: index.html
02-model-behaviour-level-simulation/vit-pim/: index.html
03-hardware-performance-simulation/underconstruction/: index.html
_sources/: index.rst
dev-guide/: index.html
docs/: dev-guide.md  env-setup.md  index.md  model-list.md
docs/01-model-training/: llm-pretrain.md  (+1 more)
env-setup/: index.html
model-list/: index.html
modules/: changelog.html
search/: search_index.json
src/: torchtitan
test/: test_bitflip.py  test_random_bitflip.py
(+235 files in other folders)
