[project]
name = "newcomputebench"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "datasets",
    "huggingface-hub[hf-transfer]",
    "jsonargparse[all]",
    "wandb",
    "transformers==4.51",
    "accelerate",
    "torch",
    "numpy",
    # torchtitan dependencies
    "tiktoken",
    "blobfile",
    "colorlog",
    "torchdata",
    "tensorboard",
    "lm-eval==0.4.7",
    "mase-triton",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-book-theme",
    "sphinx-autobuild",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
